[package]
name = "rust-cassis"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
byteorder = "1.5.0"
lazy_static = "1.4.0"
redb = "2.1.0"
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
serde_json = "1.0.116"
hex = "0.4.3"
anyhow = "1.0.82"
nohash-hasher = "0.2.0"
secp256k1 = { version = "0.29.0", features = ["hashes-std", "global-context"] }
