[workspace]
members = [ "lib", "registry", "router", "cli" ]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
serde_json = "1.0.116"
hex = { version = "0.4.3", features = ["serde"] }
anyhow = "1.0.82"
secp256k1 = { version = "0.29.0", features = ["hashes-std", "global-context", "rand-std"] }
futures = "0.3.30"
redb = "2.1.0"
