[package]
name = "cassis"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
secp256k1 = { workspace = true }
redb = { workspace = true, optional = true }
anyhow = { workspace = true }
byteorder = { workspace = true }
nohash-hasher = "0.2.0"

[features]
redb = ["dep:redb"]
