[package]
name = "cassis-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
cassis = { path = "../lib" }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
secp256k1 = { workspace = true }
futures = { workspace = true }
redb = { workspace = true }
axum = "0.7.5"
lazy_static = "1.4.0"
nohash-hasher = "0.2.0"
axum-streams = { version = "0.14.2", features = ["json"] }
async-stream = "0.3.5"
