[package]
name = "cassis-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
cassis = { path = "../lib", features = ["redb"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
secp256k1 = { workspace = true }
futures = { workspace = true }
redb = { workspace = true }
axum  = { workspace = true }
lazy_static  = { workspace = true }
byteorder = { workspace = true }
async-stream = "0.3.5"
axum-streams = { version = "0.14.2", features = ["json"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
