[package]
name = "cassis-router"
version = "0.1.0"
edition = "2021"

[dependencies]
cassis = { path = "../lib", features = ["redb"] }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
secp256k1 = { workspace = true }
futures = { workspace = true }
redb = { workspace = true }
reqwest = { workspace = true }
axum  = { workspace = true }
lazy_static  = { workspace = true }
